force-app/main/default/objects/RTL_Campaign_Reassign_Role_Setting__mdt/RTL_Campaign_Reassign_Role_Setting__mdt.object-meta.xml
<CustomObject>
    <label>RTL Campaign Reassign Role Setting</label>
    <pluralLabel>RTL Campaign Reassign Role Setting</pluralLabel>
</CustomObject>