force-app/main/default/objects/RTL_Campaign_Reassign_Role_Setting__mdt/fields/IsAllowChangeBranch__c.field-meta.xml
<CustomField>
    <fullName>IsAllowChangeBranch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllowChangeBranch</label>
    <type>Checkbox</type>
</CustomField>