force-app/main/default/objects/RTL_Campaign_Reassign_Role_Setting__mdt/fields/IstAllowedReAssign__c.field-meta.xml
<CustomField>
    <fullName>IstAllowedReAssign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IstAllowedReAssign</label>
    <type>Checkbox</type>
</CustomField>