force-app/main/default/objects/RTL_Campaign_Reassign_Role_Setting__mdt/fields/role_name__c.field-meta.xml
<CustomField>
    <fullName>role_name__c</fullName>
    <label>role name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>