force-app/main/default/objects/RTL_Campaign_Reassign_Role_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Role_Type__c</columns>
    <columns>role_name__c</columns>
    <columns>IstAllowedReAssign__c</columns>
    <columns>IsAllowChangeBranch__c</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>